--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ author_profile: true
       <p>
         <ul class="dashed">
 
-          <li> <a href="https://iopscience.iop.org/article/10.1088/1748-9326/ad2a1f"> Distributional impacts of fleet-wide change in light duty transportation: mortality risks of PM2.5 emissions from electric vehicle and Tier 3 conventional vehicles. </a>[With Chris Tessum, Julian Marshall, In&#234s Azevedo] <b><i> Environmental Research Letters</i></b>. 2024. *  [<a href="/Papers/Distributional_effects/Paper.pdf">Paper</a>] [<a href="/Papers/Distributional_effects/SI.pdf">SI</a>] </li>
+          <li> <a href="https://iopscience.iop.org/article/10.1088/1748-9326/ad2a1f"> Distributional impacts of fleet-wide change in light duty transportation: mortality risks of PM2.5 emissions from electric vehicle and Tier 3 conventional vehicles. </a>[With Chris Tessum, Julian Marshall, In&#234s Azevedo] <b><i> Environmental Research Letters</i></b>. 2024. <b>*</b>  [<a href="/Papers/Distributional_effects/Paper.pdf">Paper</a>] [<a href="/Papers/Distributional_effects/SI.pdf">SI</a>] </li>
 
                <details><summary>Abstract</summary>
 
@@ -22,7 +22,7 @@ author_profile: true
 		</details>
 
 
-          <li> <a href="https://www.nature.com/articles/s41598-024-51697-1"> Ensuring greenhouse gas reductions from electric vehicles compared to hybrid gasoline vehicles requires a cleaner U.S. electricity grid. </a>[with Tugce Yuksel, Jeremy Michalek, In&#234s Azevedo] <b><i> Nature Scientific Reports</i></b>. 2024. * [<a href="/Papers/CEF/Paper.pdf">Paper</a>] [<a href="/Papers/CEF/SI.pdf">SI</a>] [<a href="/Papers/CEF/Blog.pdf">Blog</a>] </li>
+          <li> <a href="https://www.nature.com/articles/s41598-024-51697-1"> Ensuring greenhouse gas reductions from electric vehicles compared to hybrid gasoline vehicles requires a cleaner U.S. electricity grid. </a>[with Tugce Yuksel, Jeremy Michalek, In&#234s Azevedo] <b><i> Nature Scientific Reports</i></b>. 2024. <b>*</b> [<a href="/Papers/CEF/Paper.pdf">Paper</a>] [<a href="/Papers/CEF/SI.pdf">SI</a>] [<a href="/Papers/CEF/Blog.pdf">Blog</a>] </li>
 
                <details><summary>Abstract</summary>
 
@@ -30,7 +30,7 @@ author_profile: true
 		</details>
 
 
-          <li> <a href="https://doi.org/10.32866/001c.74975">How Differential Privacy Will Affect Estimates of Air Pollution Exposure and Disparities in the United States</a>. <b><i>Findings</i></b>. 2023. [<a href="/Papers/dp_air_quality.pdf">Paper</a>] * </li>
+          <li> <a href="https://doi.org/10.32866/001c.74975">How Differential Privacy Will Affect Estimates of Air Pollution Exposure and Disparities in the United States</a>. <b><i>Findings</i></b>. 2023.<b>*</b> [<a href="/Papers/dp_air_quality.pdf">Paper</a>] </li>
 
                <details><summary>Abstract</summary>
 
@@ -39,7 +39,7 @@ author_profile: true
 		</details>
 
 
-          <li> <a href="https://doi.org/10.1109/JPROC.2019.2910834">Microhybrid Electricity System for Energy Access, Livelihoods, and Empowerment</a>. [with P Balachandra]. <b><i>Proceedings of the IEEE</i></b>. 2019. [<a href="/Papers/Microhybrid_Electricity_System_for_Energy_Access_Livelihoods_and_Empowerment.pdf">Paper</a>] * </li>
+          <li> <a href="https://doi.org/10.1109/JPROC.2019.2910834">Microhybrid Electricity System for Energy Access, Livelihoods, and Empowerment</a>. [with P Balachandra]. <b><i>Proceedings of the IEEE</i></b>. 2019. <b>*</b>[<a href="/Papers/Microhybrid_Electricity_System_for_Energy_Access_Livelihoods_and_Empowerment.pdf">Paper</a>] </li>
 
                <details><summary>Abstract</summary>
 
@@ -49,7 +49,7 @@ author_profile: true
 
 
 
-          <li> <a href="https://iopscience.iop.org/article/10.1088/2634-4505/ad54ed"> Pathways to zero emissions in California’s heavy-duty transportation Sector </a> [With Eleanor Hennessy, Sarah Saltzer, In&#234s Azevedo] <b><i> Environmental Research: Infrastructure and Sustainability </i></b>. [<a href="/Papers/stock_flow/Hennessy_2024_truck_retirement.pdf">Paper</a>] </li>. 2024.
+          <li> <a href="https://iopscience.iop.org/article/10.1088/2634-4505/ad54ed"> Pathways to zero emissions in California’s heavy-duty transportation Sector </a> [With Eleanor Hennessy, Sarah Saltzer, In&#234s Azevedo] <b><i> Environmental Research: Infrastructure and Sustainability</i></b>. 2024. [<a href="/Papers/stock_flow/Hennessy_2024_truck_retirement.pdf">Paper</a>] </li>
 
                <details><summary>Abstract</summary>
 
@@ -75,7 +75,7 @@ author_profile: true
 
 
 
-          <li> <a> Equitable retail rates for a decarbonized and resilient electricity system. [with Bruce Cain, In&#234s Azevedo]</a> <b><i> in revision at Progress in Energy </i></b> [<a href="/Papers/RateDesign/Draft_Perspective.pdf">Draft</a>] * </li>  
+          <li> <a> Equitable retail rates for a decarbonized and resilient electricity system. [with Bruce Cain, In&#234s Azevedo]</a> <b><i> in revision at Progress in Energy </i></b> [<a href="/Papers/RateDesign/Draft_Perspective.pdf">Draft</a>] <b>*</b> </li>  
               <details><summary>Abstract</summary>
 
 
@@ -87,13 +87,12 @@ and utility innovation has been slow, with less than 1% of Americans facing an e
 	</details>
 
 
-          <li> <a> Pathways to zero emissions in California's light-duty transportation sector. [With Eleanor Hennessy, Sarah Saltzer, In&#234s Azevedo] </a><b><i>In submission</i></b>. * </li>
+          <li> <a> Pathways to zero emissions in California's light-duty transportation sector. [With Eleanor Hennessy, Sarah Saltzer, In&#234s Azevedo] </a><b><i>In submission</i></b>.<b>*</b> </li>
 
                <details><summary>Abstract</summary>
 
                 <p> The state of California has ambitious climate and public health targets, including reaching a net-zero emissions economy by 2045. In this work we explore pathways to achieve zero emissions in California’s light-duty transportation sector, responsible for 28% of the state’s emissions. We establish a business-as-usual trajectory and focus on fleet turnover dynamics under different policy scenarios. Specifically, we consider the following policies and their combination: (i) a zero-emissions vehicles (ZEV) sales mandate and (ii) accelerated retirement of internal combustion vehicles (ICV). We simulate scenarios with varying ZEV mandate onset, retirement year, and retirement age to find cumulative CO2 and PM2.5 emissions, premature mortality, and environmental justice impacts. We discuss the implications of delaying the start of these policies as well as benefits and costs associated with accelerated retirement by monetizing climate and health benefits and using second-hand vehicle prices as a proxy for costs. We find that 20% of the 2019 ICV fleet will remain on the road in 2045 even if California achieves 100% ZEV sales by 2035. Given the status quo, retiring vehicles above the age of 10 starting in 2040 have positive net benefits. These scenarios reduce GHG emissions by 35% and premature mortality by 23% compared to BAU. Retirements of vehicles 10 years and above starting in 2025 yield net benefits if the social cost of carbon is doubled. These scenarios reduce cumulative emissions and mortality by 50%. Retiring vehicles of age 5 and above isn’t cost-effective in almost all scenarios. </p>
 		</details>
-
 
 
  
@@ -108,7 +107,7 @@ and utility innovation has been slow, with less than 1% of Americans facing an e
       <p>
         <ul class="dashed">
 
-          <li> <a>Designing efficient and equitable retail rate for distributed energy resources. [with Bruce Cain, In&#234s Azevedo]</a> </li>
+          <li> <a>Designing efficient and equitable retail rate for distributed energy resources. </a> </li>
 
                <details><summary>Abstract</summary>
 
@@ -116,15 +115,21 @@ and utility innovation has been slow, with less than 1% of Americans facing an e
 
 	</details>
 
-          <li> <a> Why are California's electricity prices so high? A primer. [with Bruce Cain, In&#234s Azevedo]</a> </li>
+
+
+      <div align="left">
+        <h3 id="pubs">Reports</h3>
+      </div>
+      <p>
+        <ul class="dashed">
+
+          <li> <a> Pathways to Carbon Neutrality in California: Decarbonizing the Transportation Sector. </a> </li>
 
                <details><summary>Abstract</summary>
 
-                <p> California has taken great strides in modernizing and decarbonizing its electricity system. The state has one of the least carbon-intensive electricity and has the largest adoption of grid-scale storage (3,136 MW), residential rooftop solar (13,064 MW), and zero emissions vehicles (18% of total sales) in the country. At the same time, electricity is expensive in California. Customers in three investor-owned utilities pay 45-100% more than the national average per kilowatt hour. This primer parses out reasons for California's high electricity prices using data on revenue requirements, rate of return, trends in electricity generation, network, and wildfire mitigation costs, and distribution upgrades. </p>
+                <p> Rooftop solar and storage (distributed electricity generation, DER) can play an important role in enabling decarbonization and improving reliability. Households can consume, store, or send the electricity produced by DER back to the grid. Under net-energy metering policies, households with DER are compensated for the surplus electricity produced at the retail electricity rate. Retail rates typically charge residential users a volumetric rate that covers the bulk of energy, transmission, and distribution costs. The resulting price, charged per unit of electricity, neither reflects the marginal costs of producing the electricity nor does it vary by space and time. Non-time-varying volumetric electricity rates also don’t accurately reflect the true benefits that DERs provide to the electricity grid and have led to interest among policymakers to modernize the electricity rates. Significant concerns about cross-subsidies have also been raised. By realizing significant bill savings under net-energy metering, adopters of DERs effectively shift part of their obligation for the grid operation costs to non-adopters. Hence, the challenge to modernize the electricity rate entails aligning prices to the true cost of generation of electricity; pricing benefits to the true benefits DERs provide; and ensuring that non-adopters, often low-income and/or renters, don’t bear the burdens of cost-shift. In this work, we propose an electricity pricing and household electricity consumption model that tests different electricity rates to enable efficiency and equity for adopters and non-adopters. California, which has one of the highest electricity rates and penetration of DERs in the United States, is used as a case study for demonstration.</p>
 
 	</details>
-
-
 
 
 
@@ -137,9 +142,9 @@ and utility innovation has been slow, with less than 1% of Americans facing an e
 		<br><b> <a href="https://proud-share-881.notion.site/Books-99d67e82da53424eb0e8b3c4a972ca2f?pvs=4"> Reading </a> </b> </br>
 		<small> -->
 
-		<br><small> <small>
+		<br><small> <small> <small>
                     <b>About this website:</b> Code from <a href="https://github.com/mmistakes/minimal-mistakes">Minimal Mistakes</a> and Shiro Kuriwake's <a href = "https://www.shirokuriwaki.com/">website</a>.
-                </small> </small> </br>
+                </small> </small> </small> </br>
 
                 </section>
               </div>
