--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ author_profile: true
 		</details>
 
 
-          <li> <a href="https://doi.org/10.1109/JPROC.2019.2910834">Microhybrid Electricity System for Energy Access, Livelihoods, and Empowerment</a>. [with P Balachandra]. <b><i>Proceedings of the IEEE</i></b>. 2019. <b>*</b>[<a href="/Papers/Microhybrid_Electricity_System_for_Energy_Access_Livelihoods_and_Empowerment.pdf">Paper</a>] </li>
+          <li> <a href="https://doi.org/10.1109/JPROC.2019.2910834">Microhybrid Electricity System for Energy Access, Livelihoods, and Empowerment</a>. [with P Balachandra]. <b><i>Proceedings of the IEEE</i></b>. 2019.<b>*</b>[<a href="/Papers/Microhybrid_Electricity_System_for_Energy_Access_Livelihoods_and_Empowerment.pdf">Paper</a>] </li>
 
                <details><summary>Abstract</summary>
 
@@ -95,6 +95,16 @@ and utility innovation has been slow, with less than 1% of Americans facing an e
 		</details>
 
 
+
+          <li> <a> Trends and drivers of utility costs in California [with Alison Ong, Rayan Sud] </a><b><i>In submission</i></b>.<b>*</b> </li>
+
+               <details><summary>Abstract</summary>
+
+                <p> Electricity affordability is a salient policy concern in California. We compare trends and drivers of increasing utility costs and electricity rates for three types of power providers in California: investor-owned utilities (IOUs), publicly-owned utilities (POUs), and community choice aggregators (CCAs). Since 2019, the IOU and CCA residential baseline electricity rates have increased by 44-80% after accounting for inflation, making them some of the most expensive power providers in the United States. POU prices, on the other hand, have remained constant. We compile long-term trends in California power providers' capital assets, returns, and operation & maintenance expenses to identify sources of increasing utility costs and customer rates. Across IOUs,  generation expenses have decreased or remained in historical ranges but transmission and distribution (T&D) expenses have increased. The rise is sharpest for T&D operations and maintenance expenses, which practically remained constant until wildfires occurred due to power lines. CCAs, which procure their electricity but use the IOU T&D network, reach price parity with IOUs because of high T&D costs as well as exit fees levied on them. POUs, which service smaller territories with low wildfire risks, have also increased T&D capital assets and overall operations and maintenance expenses but the increases are modest. We foresee continued price divergence among power providers owing to wildfire mitigation costs, which will have important affordability consequences across the state.
+ </p>
+
+	</details>
+
  
 
 
@@ -117,19 +127,6 @@ and utility innovation has been slow, with less than 1% of Americans facing an e
 
 
 
-      <div align="left">
-        <h3 id="pubs">Reports</h3>
-      </div>
-      <p>
-        <ul class="dashed">
-
-          <li> <a> Pathways to Carbon Neutrality in California: Decarbonizing the Transportation Sector. </a> </li>
-
-               <details><summary>Abstract</summary>
-
-                <p> Rooftop solar and storage (distributed electricity generation, DER) can play an important role in enabling decarbonization and improving reliability. Households can consume, store, or send the electricity produced by DER back to the grid. Under net-energy metering policies, households with DER are compensated for the surplus electricity produced at the retail electricity rate. Retail rates typically charge residential users a volumetric rate that covers the bulk of energy, transmission, and distribution costs. The resulting price, charged per unit of electricity, neither reflects the marginal costs of producing the electricity nor does it vary by space and time. Non-time-varying volumetric electricity rates also don’t accurately reflect the true benefits that DERs provide to the electricity grid and have led to interest among policymakers to modernize the electricity rates. Significant concerns about cross-subsidies have also been raised. By realizing significant bill savings under net-energy metering, adopters of DERs effectively shift part of their obligation for the grid operation costs to non-adopters. Hence, the challenge to modernize the electricity rate entails aligning prices to the true cost of generation of electricity; pricing benefits to the true benefits DERs provide; and ensuring that non-adopters, often low-income and/or renters, don’t bear the burdens of cost-shift. In this work, we propose an electricity pricing and household electricity consumption model that tests different electricity rates to enable efficiency and equity for adopters and non-adopters. California, which has one of the highest electricity rates and penetration of DERs in the United States, is used as a case study for demonstration.</p>
-
-	</details>
 
 
 
