--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ author_profile: true
 
 
 
-          <li> <a href="https://iopscience.iop.org/article/10.1088/2634-4505/ad54ed"> Pathways to zero emissions in California’s heavy-duty transportation Sector </a> [With Eleanor Hennessy, Sarah Saltzer, In&#234s Azevedo] <b><i> Environmental Research: Infrastructure and Sustainability</i></b>. 2024. [<a href="/Papers/stock_flow/Hennessy_2024_truck_retirement.pdf">Paper</a>] </li>
+          <li> <a href="https://iopscience.iop.org/article/10.1088/2634-4505/ad54ed"> Pathways to zero emissions in California’s heavy-duty transportation Sector </a> [With Eleanor Hennessy, Sarah Saltzer, In&#234s Azevedo]. <b><i> Environmental Research: Infrastructure and Sustainability</i></b>. 2024. [<a href="/Papers/stock_flow/Hennessy_2024_truck_retirement.pdf">Paper</a>] </li>
 
                <details><summary>Abstract</summary>
 
