--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@ author_profile: true
 
 
 
-          <li> <a href="https://iopscience.iop.org/article/10.1088/2634-4505/ad54ed"> Pathways to zero emissions in California’s heavy-duty transportation Sector </a> [With Eleanor Hennessy, Sarah Saltzer, In&#234s Azevedo]. <b><i> Environmental Research: Infrastructure and Sustainability</i></b>. 2024. [<a href="/Papers/stock_flow/Hennessy_2024_truck_retirement.pdf">Paper</a>] </li>
+          <li> <a href="https://iopscience.iop.org/article/10.1088/2634-4505/ad54ed"> Pathways to zero emissions in California’s heavy-duty transportation sector </a> [With Eleanor Hennessy, Sarah Saltzer, In&#234s Azevedo]. <b><i> Environmental Research: Infrastructure and Sustainability</i></b>. 2024. [<a href="/Papers/stock_flow/Hennessy_2024_truck_retirement.pdf">Paper</a>] </li>
 
                <details><summary>Abstract</summary>
 
-                <p> California contributes 0.75% of global greenhouse gas (GHG) emissions and has a target of reaching economy-wide net zero emissions by 2045, requiring all sectors to rapidly reduce emissions. Nearly 8% of California's GHG emissions are from the heavy-duty transportation sector. In this work, we simulate decarbonization strategies for the heavy-duty vehicle (HDV) fleet using detailed fleet turnover and air quality models to track evolution of the fleet, GHG and criteria air pollutant emissions, and resulting air quality and health impacts across sociodemographic groups. We assess the effectiveness of two types of policies: zero emission vehicle sales mandates, and accelerated retirement policies. For policies including early retirements, we estimate the cost of early retirements and the cost-effectiveness of each policy. We find even a policy mandating all HDV sales to be zero emission vehicles by 2025 would not achieve fleetwide zero emissions by 2045. For California to achieve its goal of carbon neutrality, early retirement policies are needed. We find that a combination of early retirement policies and zero emission vehicle sales mandates could reduce cumulative CO2 emissions by up to 64%. Furthermore, we find that decarbonization policies will significantly reduce air pollution-related mortality, and that Black, Latino, and low-income communities will benefit most. We find that policies targeting long-haul heavy-heavy duty trucks would have the greatest benefits and be most cost-effective. </p>
+                <p> California contributes 0.75% of global greenhouse gas (GHG) emissions and has a target of reaching economy-wide net zero emissions by 2045, requiring all sectors to rapidly reduce emissions. Nearly 8% of California's GHG emissions are from the heavy-duty transportation sector. In this work, we simulate decarbonization strategies for the heavy-duty vehicle (HDV) fleet using detailed fleet turnover and air quality models to track the evolution of the fleet, GHG and criteria air pollutant emissions, and resulting air quality and health impacts across sociodemographic groups. We assess the effectiveness of two types of policies: zero-emission vehicle sales mandates and accelerated retirement policies. For policies including early retirements, we estimate the cost of early retirements and the cost-effectiveness of each policy. We find even a policy mandating all HDV sales to be zero-emission vehicles by 2025 would not achieve fleetwide zero emissions by 2045. For California to achieve its goal of carbon neutrality, early retirement policies are needed. We find that a combination of early retirement policies and zero-emission vehicle sales mandates could reduce cumulative CO2 emissions by up to 64%. Furthermore, we find that decarbonization policies will significantly reduce air pollution-related mortality and that Black, Latino, and low-income communities will benefit most. We find that policies targeting long-haul heavy-heavy duty trucks would have the greatest benefits and be most cost-effective. </p>
 		</details>
 
 
@@ -75,7 +75,7 @@ author_profile: true
 
 
 
-          <li> <a> Equitable retail rates for a decarbonized and resilient electricity system. [with Bruce Cain, In&#234s Azevedo]</a> <b><i> in revision at Progress in Energy </i></b> [<a href="/Papers/RateDesign/Draft_Perspective.pdf">Draft</a>] <b>*</b> </li>  
+          <li> <a> Equitable retail rates for a decarbonized and resilient electricity system. [with Bruce Cain, In&#234s Azevedo]</a> <b><i> in revision, Progress in Energy </i></b> [<a href="/Papers/RateDesign/Draft_Perspective.pdf">Draft</a>] <b>*</b> </li>  
               <details><summary>Abstract</summary>
 
 
@@ -87,7 +87,7 @@ and utility innovation has been slow, with less than 1% of Americans facing an e
 	</details>
 
 
-          <li> <a> Policies to retire old light-duty vehicles will help achieve California’s zero-emissions targets and provide substantial air-pollution co-benefits. [With Eleanor Hennessy, Sarah Saltzer, Andrew Berson, In&#234s Azevedo] </a><b><i>In submission</i></b>.<b>*</b> </li>
+          <li> <a> Policies to retire old light-duty vehicles will help achieve California’s zero-emissions targets and provide substantial air-pollution co-benefits. [With Eleanor Hennessy, Sarah Saltzer, Andrew Berson, In&#234s Azevedo] </a><b><i>In submission</i></b>.<b>*</b> [<a href="/Papers/stock_flow/LDV_draft.pdf">Draft</a>] </li>
 
                <details><summary>Abstract</summary>
 
@@ -96,7 +96,7 @@ and utility innovation has been slow, with less than 1% of Americans facing an e
 
 
 
-          <li> <a> Trends and drivers of utility costs in California [with Alison Ong, Rayan Sud] </a><b><i>In submission</i></b>.<b>*</b> </li>
+          <li> <a> Trends and drivers of utility costs in California [with Alison Ong, Rayan Sud] </a><b><i>In submission</i></b>.<b>*</b> [<a href="/Papers/RateDesign/Trends_utility_rates.pdf">Draft</a>]</li>
 
                <details><summary>Abstract</summary>
 
