--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ and utility innovation has been slow, with less than 1% of Americans facing an e
 
 
 
-          <li> <a> Trends and drivers of utility costs in California [with Alison Ong, Rayan Sud] </a><b><i>In submission</i></b>.<b>*</b> [<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4987198>SSRN</a>]</li>
+          <li> <a> Trends and drivers of utility costs in California [with Alison Ong, Rayan Sud] </a><b><i>In submission</i></b>.<b>*</b> [<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4987198">SSRN</a>]</li>
 
                <details><summary>Abstract</summary>
 
