--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ author_profile: true
 
 
 
-          <li> <a> Equitable retail rates for a decarbonized and resilient electricity system. [with Bruce Cain, In&#234s Azevedo]</a> <b><i> in revision, Progress in Energy </i></b> [<a href="/Papers/RateDesign/Draft_Perspective.pdf">Draft</a>] <b>*</b> </li>  
+          <li> <a> Equitable retail rates for a decarbonized and resilient electricity system. [with Bruce Cain, In&#234s Azevedo]</a> <b><i> in revision, Progress in Energy.</i></b> <b>*</b> [<a href="/Papers/RateDesign/Draft_Perspective.pdf">Draft</a>]</li>  
               <details><summary>Abstract</summary>
 
 
@@ -96,7 +96,7 @@ and utility innovation has been slow, with less than 1% of Americans facing an e
 
 
 
-          <li> <a> Trends and drivers of utility costs in California [with Alison Ong, Rayan Sud] </a><b><i>In submission</i></b>.<b>*</b> [<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4987198">SSRN</a>]<a href="Papers/RateDesign/Trends_utility_rates.pdf">DRAFT</a>]</li>
+          <li> <a> Trends and drivers of utility costs in California [with Alison Ong, Rayan Sud] </a><b><i>In submission</i></b>.<b>*</b> [<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4987198">SSRN</a>]<a href="Papers/RateDesign/Trends_utility_rates.pdf"> [Draft</a>]</li>
 
                <details><summary>Abstract</summary>
 
