--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ author_profile: true
 
 
 
-          <li> <a> Equitable retail rates for a decarbonized and resilient electricity system. [with Bruce Cain, In&#234s Azevedo]</a> <b><i> in revision, Progress in Energy.</i></b> <b>*</b> [<a href="/Papers/RateDesign/Draft_Perspective.pdf">Draft</a>]</li>  
+          <li> <a> Equitable retail rates for a decarbonized and resilient electricity system. [with Bruce Cain, In&#234s Azevedo]</a> <b><i> In revision, Progress in Energy.</i></b> <b>*</b> [<a href="/Papers/RateDesign/Draft_Perspective.pdf">Draft</a>]</li>  
               <details><summary>Abstract</summary>
 
 
