Add navigation sidebar and restructure site sections

--- a/index.html
+++ b/index.html
@@ -5,7 +5,48 @@ author_profile: true
 
 <div class="wrapper">
   <section>
+    
+    <!-- Navigation Menu -->
+    <nav class="page-nav">
+      <ul>
+        <li><a href="#pubs">Publications</a></li>
+        <li><a href="#teaching">Teaching</a></li>
+        <li><a href="#media">Media</a></li>
+      </ul>
+    </nav>
 
+    <style>
+      .page-nav {
+        background-color: #f8f9fa;
+        padding: 15px 0;
+        margin-bottom: 30px;
+        border-radius: 5px;
+      }
+      .page-nav ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+      }
+      .page-nav li {
+        margin: 0 20px;
+      }
+      .page-nav a {
+        color: #333;
+        text-decoration: none;
+        font-weight: 500;
+        font-size: 16px;
+        padding: 8px 12px;
+        border-radius: 4px;
+        transition: background-color 0.2s;
+      }
+      .page-nav a:hover {
+        background-color: #e9ecef;
+        text-decoration: none;
+      }
+    </style>
       <div align="left">
 	<p> <b>* denotes self or student author publication </b>
 
