Add navigation sidebar and restructure site sections

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ author_profile: true
         text-decoration: none;
       }
     </style>
+
       <div align="left">
 	<p> <b>* denotes self or student author publication </b>
 
@@ -140,6 +141,43 @@ and utility innovation has been slow, with less than 1% of Americans facing an e
 
 	</details>
 	</ul>
+
+      <div align="left">
+        <h3 id="teaching">Teaching</h3>
+      </div>
+      <p>
+        <ul class="dashed">
+
+          <li><b>Multicriteria Sustainable Systems</b></li>
+          <details><summary>Course Description</summary>
+            <p>This class will explore how decisions are made when confronted with multiple, often conflicting, criteria or constraints. The focus will be on the following analytical methods: linear and stochastic programming, optimization, and Monte Carlo simulation. Case studies will focus on sustainability multi-criteria problems such as energy planning, sustainable development, resource management, and recycling. Students will apply methods learned to a project involving their dissertation research.</p>
+          </details>
+
+          <li><b>Fundamentals of Sustainability Science</b></li>
+          <details><summary>Course Description</summary>
+            <p>This course prepares students to understand grand challenges in sustainability, conduct original research related to sustainable production and consumption systems, and apply the scientific method in an integrative, team-based approach to graduate research. This course introduces fundamental concepts that are essential to understanding the interaction of economic, environmental, and social systems. Successful students will understand multiple perspectives on sustainability, the importance of sustainability as an ethical concept, behavioral impacts to sustainable solutions, and a life-cycle approach to organizing research related to sustainability.</p>
+          </details>
+
+        </ul>
+      </p>
+
+      <div align="left">
+        <h3 id="media">Media</h3>
+      </div>
+      <p>
+        <ul class="dashed">
+
+          <li><a href="https://heatmap.news/energy/why-is-electricity-so-expensive">Why Is Electricity So Expensive?</a> <b><i>Heatmap News</i></b>. 2025. (Quote)</li>
+
+          <li><a href="https://www.theverge.com/climate-change/603622/deepseek-ai-environment-energy-climate">DeepSeek's AI breakthrough is great for competition — but what about the climate?</a> <b><i>The Verge</i></b>. 2025. (Quote)</li>
+
+          <li><a href="https://www.kqed.org/science/1991185/should-i-buy-an-electric-vehicle-in-california-all-your-questions-answered">Should I Buy an Electric Vehicle in California? All Your Questions, Answered</a> <b><i>KQED</i></b>. 2024. (Research mentioned)</li>
+
+          <li><a href="https://www.hindustantimes.com/analysis/covid-19-india-needs-a-green-economic-stimulus-opinion/story-MnFm3MdzRWWv1pD5COFKzJ.html">Covid-19: India needs a green economic stimulus</a> <b><i>Hindustan Times</i></b>. 2020. (Commentary)</li>
+
+        </ul>
+      </p>
+
                 <hr>
 		<!--<small>
 
