Add navigation sidebar and restructure site sections

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ and utility innovation has been slow, with less than 1% of Americans facing an e
 
           <li><a href="https://heatmap.news/energy/why-is-electricity-so-expensive">Why Is Electricity So Expensive?</a> <b><i>Heatmap News</i></b>. 2025. (Quote)</li>
 
-          <li><a href="https://www.theverge.com/climate-change/603622/deepseek-ai-environment-energy-climate">DeepSeek's AI breakthrough is great for competition — but what about the climate?</a> <b><i>The Verge</i></b>. 2025. (Quote)</li>
+          <li><a href="https://www.theverge.com/climate-change/603622/deepseek-ai-environment-energy-climate"> AI is ‘an energy hog,’ but DeepSeek could change that.</a> <b><i>The Verge</i></b>. 2025. (Quote)</li>
 
           <li><a href="https://www.kqed.org/science/1991185/should-i-buy-an-electric-vehicle-in-california-all-your-questions-answered">Should I Buy an Electric Vehicle in California? All Your Questions, Answered</a> <b><i>KQED</i></b>. 2024. (Research mentioned)</li>
 
