Add navigation sidebar and restructure site sections

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@ author_profile: true
     </style>
 
       <div align="left">
-	<p> <b>* denotes self or student author publication </b>
+	<p> * first-author publication
 
         <h3 id="pubs">Peer-Reviewed Publications</h3>
       </div>
       <p>
-        <ul class="dashed">
+        <ol>
 
           <li> <a href="https://doi.org/10.1016/j.tej.2025.107475">Wires and fire: Wildfire investment and network cost differences across California's power providers</a>. [with Alison Ong, Rayan Sud] <b><i> The Electricity Journal</i></b>. 2025. <b>*</b> [<a href="/Papers/RateDesign/Trends_utility_rates_2.pdf">Paper</a>] </li>
 
@@ -140,7 +140,7 @@ and utility innovation has been slow, with less than 1% of Americans facing an e
                 <p> Rooftop solar and storage (distributed electricity generation, DER) can play an important role in enabling decarbonization and improving reliability. Households can consume, store, or send the electricity produced by DER back to the grid. Under net-energy metering policies, households with DER are compensated for the surplus electricity produced at the retail electricity rate. Retail rates typically charge residential users a volumetric rate that covers the bulk of energy, transmission, and distribution costs. The resulting price, charged per unit of electricity, neither reflects the marginal costs of producing the electricity nor does it vary by space and time. Non-time-varying volumetric electricity rates also don't accurately reflect the true benefits that DERs provide to the electricity grid and have led to interest among policymakers to modernize the electricity rates. Significant concerns about cross-subsidies have also been raised. By realizing significant bill savings under net-energy metering, adopters of DERs effectively shift part of their obligation for the grid operation costs to non-adopters. Hence, the challenge to modernize the electricity rate entails aligning prices to the true cost of generation of electricity; pricing benefits to the true benefits DERs provide; and ensuring that non-adopters, often low-income and/or renters, don't bear the burdens of cost-shift. In this work, we propose an electricity pricing and household electricity consumption model that tests different electricity rates to enable efficiency and equity for adopters and non-adopters. California, which has one of the highest electricity rates and penetration of DERs in the United States, is used as a case study for demonstration.</p>
 
 	</details>
-	</ul>
+	</ol>
 
       <div align="left">
         <h3 id="teaching">Teaching</h3>
