Add navigation sidebar and restructure site sections

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@ author_profile: true
     </style>
 
       <div align="left">
-	<p> * first-author publication
-
-        <h3 id="pubs">Peer-Reviewed Publications</h3>
+	<p> 
+	<h3 id="pubs">Peer-Reviewed Publications</h3>
+	* first-author publication
       </div>
       <p>
         <ol>
