--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@ author_profile: true
     <!-- Navigation Menu -->
     <nav class="page-nav">
       <ul>
-        <li><a href="#pubs">Publications</a></li>
-        <li><a href="#teaching">Teaching</a></li>
-        <li><a href="#media">Media</a></li>
+        <li><a href="pubs">Publications</a></li>
+        <li><a href="teaching">Teaching</a></li>
+        <li><a href="media">Media</a></li>
+        <li><a href="cv/cv_madalsa">CV</a></li>
+
+
+
       </ul>
     </nav>
 
