--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ author_profile: true
         <li><a href="#pubs">Publications</a></li>
         <li><a href="#teaching">Teaching</a></li>
         <li><a href="#media">Media</a></li>
-        <li><a href="cv/cv_madalsa.pdf">C.V.</a></li>
+        <li><a href="/cv/cv_madalsa.pdf">C.V.</a></li>
 
 
 
