--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ and utility innovation has been slow, with less than 1% of Americans facing an e
       <p>
         <ul class="dashed">
 
-          <li><a href="https://heatmap.news/energy/why-is-electricity-so-expensive">How Electricity Got Expensive?</a> <b><i>Heatmap News</i></b>. 2025. (Quote)</li>
+          <li><a href="https://heatmap.news/energy/why-is-electricity-so-expensive">How electricity got so expensive?</a> <b><i>Heatmap News</i></b>. 2025. (Quote)</li>
 
           <li><a href="https://www.theverge.com/climate-change/603622/deepseek-ai-environment-energy-climate"> AI is ‘an energy hog,’ but DeepSeek could change that.</a> <b><i>The Verge</i></b>. 2025. (Quote)</li>
 
