--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@ author_profile: true
     </style>
 
       <div align="left">
+	<span style="background-color: yellow;"> I'll be recruiting PhD students for the next admissions cycle (Fall 2026)!</span> If you're interested in decarbonizing energy systems, integrating hyperscale demand, and sustainable mobility, consider applying to RIT's <a href = "https://www.rit.edu/study/sustainability-phd"> Sustainability PhD program </a> (Deadline: Jan 15, 2026) and mention my name in your application. Feel free to reach out to me via email.
+
 	<p> 
 	<h3 id="pubs">Peer-Reviewed Publications</h3>
 	* first-author publication
