--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ author_profile: true
     </style>
 
       <div align="left">
-	<h4><span style="background-color: yellow;"> I'll be recruiting PhD students for the next admissions cycle (Fall 2026)!</span> If you're interested in decarbonizing energy systems, integrating hyperscale demand in our electricity grids, and advancing sustainable mobility, consider applying to RIT's <a href = "https://www.rit.edu/study/sustainability-phd"> Sustainability PhD program </a> (Deadline: Jan 15, 2026) and mention my name in your application. Feel free to reach out to me via email.</h4>
+	<h4><span style="background-color: yellow;"> I'm recruiting PhD students for this year's admissions cycle (to start in Fall 2026)!</span> If you're interested in decarbonizing energy systems, integrating hyperscale demand in our electricity grids, and advancing sustainable mobility, consider applying to RIT's <a href = "https://www.rit.edu/study/sustainability-phd"> Sustainability PhD program </a> (Deadline: Jan 15, 2026) and mention my name in your application. Feel free to reach out to me via email.</h4>
 
 	<p> 
 	<h3 id="pubs">Peer-Reviewed Publications</h3>
