--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ author_profile: true
 
 	<p> 
 	<h3 id="pubs">Peer-Reviewed Publications</h3>
-	* first-author publication
+	<small> * first-author publication </small> 
       </div>
       <p>
         <ol>
