--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@ author_profile: true
       <p>
         <ol>
 
-          <li> <a href="https://doi.org/10.1016/j.tej.2025.107475">Wires and fire: Wildfire investment and network cost differences across California's power providers</a>. [with Alison Ong, Rayan Sud] <b><i> The Electricity Journal</i></b>. 2025. <b>*</b> [<a href="/Papers/RateDesign/wires_fire.pdf">Paper</a>] </li>
+          <li> <a href="https://doi.org/10.1016/j.tej.2025.107475">Wires and fire: Wildfire investment and network cost differences across California's power providers</a>. [with Alison Ong, Rayan Sud] <b><i> The Electricity Journal</i></b>. 2025. <b>*</b> [<a href="/Papers/RateDesign/wires_fire.pdf">Paper</a>]
 
                <details><summary>Abstract</summary>
 
                 <p> Electricity affordability is a salient policy concern in California. We compare drivers of increasing utility costs for three types of power providers in California: investor-owned utilities (IOUs), publicly owned utilities (POUs), and community choice aggregators (CCAs). Since 2019, the IOU and CCA residential baseline electricity rates have increased by 44–80 % after accounting for inflation, making them some of the most expensive power providers in the United States. POU prices, however, remained nearly unchanged. We compare long-term trends in capital assets, returns, and operation and maintenance expenses to identify sources of increasing utility costs, one of the factors contributing to rising electricity prices in the state. Across IOUs, generation capital assets have declined. Fuel and power purchase expenses have increased, although these increases remain within their historical ranges. Transmission and distribution (T&D) expenses have increased significantly and are the majority of overall costs. T&D operations and maintenance spiked following major wildfires after years of remaining constant despite an aging and expanding electricity grid. CCAs reach price parity with IOUs due to the high costs of T&D infrastructure and exit fees levied on them. POUs, which service smaller territories with low wildfire risks, also expanded their T&D capital assets, operations, and maintenance expenses, but the increase is modest. We foresee continued price divergence among power providers due to wildfire mitigation costs, which will have important affordability consequences. </p>
-		</details>
+		</details> </li>
 
           <li> <a href="https://iopscience.iop.org/article/10.1088/1748-9326/ad2a1f"> Distributional impacts of fleet-wide change in light duty transportation: mortality risks of PM2.5 emissions from electric vehicle and Tier 3 conventional vehicles. </a>[With Chris Tessum, Julian Marshall, In&#234s Azevedo] <b><i> Environmental Research Letters</i></b>. 2024. <b>*</b>  [<a href="/Papers/Distributional_effects/Paper.pdf">Paper</a>] [<a href="/Papers/Distributional_effects/SI.pdf">SI</a>] </li>
 
